# multi-agent-council

./: .gitignore  README.md  council_config.example.json  council_server.py  pyproject.toml  requirements.txt  run_council.py
council/: __init__.py  config.py  constants.py  engine.py  exceptions.py  file_reader.py  history.py  logging_config.py  models.py  project_indexer.py  security.py  tools.py  utils.py
council/formatters/: json_fmt.py  markdown.py
council/llm/: anthropic_client.py  base.py  circuit_breaker.py  factory.py  openai_client.py
