[project]
name = "council-mcp-server"
version = "2.0.0"
description = "Multi-agent code review MCP server with consensus voting"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "anthropic>=0.45.0",
    "openai>=1.60.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
